# DicomReader

./: DicomReader.sln  README.md
DicomReader/: CMakeLists.txt  DicomReader.aps  DicomReader.vcxproj  DicomReader.vcxproj.filters  DicomReaderDlg.cpp  DicomReaderDlg.h  DicomUtil.h  DicomUtilImpl.cpp  DicomUtilImpl.h  Image.cpp  Image.h  dicomimage.cpp  dicomimage.h  dicomreader.ui  glwidget.cpp  glwidget.h  main.cpp  resource.h  wltool.cpp  wltool.h
